[tool.poetry]
name = "jange"
version = "0.1.0"
description = "Easy NLP library for Python"
authors = ["Sanjaya Subedi <jangedoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "1.3.1"
psycopg2-binary = "^2.8.3"
pandas = "0.24.2"
cytoolz = "^0.10.0"
spacy="^2.2.0"
scikit-learn = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
flake8 = "^3.7.9"
black = "^19.10b0"
ipykernel = "^5.3.1"