[tool.poetry]
name = "jange"
version = "0.1.4"
description = "Easy NLP library for Python"
authors = ["Sanjaya Subedi <jangedoo@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/jangedoo/jange"
keywords = ["nlp", "text processing", "text analytics"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "1.3.1"
psycopg2-binary = "^2.8.3"
pandas = "0.24.2"
cytoolz = "^0.10.0"
spacy="^2.2.0"
scikit-learn = "^0.23.1"
jsonschema = "^3.2.0"
plotly = "^4.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
flake8 = "^3.7.9"
black = "^19.10b0"
ipykernel = "^5.3.1"
pytest-cov = "^2.10.0"
sphinx = "^3.1.2"
sphinx_rtd_theme = "^0.5.0"
nbformat = "^5.0.7"
recommonmark = "^0.6.0"
